less update complete

--- a/main.less
+++ b/main.less
@@ -30,3 +30,13 @@ canvas.fullScreen {
 .verticalScrollBarDark::-webkit-scrollbar-track  {-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);}
 .verticalScrollBarDark::-webkit-scrollbar-thumb  {border-radius: 10px;-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.7);}
 .verticalScrollBarDark::-webkit-scrollbar-corner {background-color: rgba(0,0,0,0);}
+
+
+//LESS IMPORTS
+@import 'elements/dropDown/dropDown.less';
+@import 'elements/sliderVertical/sliderVertical.less';
+
+@import 'directives/copier/copier.less';
+@import 'directives/helpWindow/helpWindow.less';
+@import 'directives/menu/menu.less';
+@import 'directives/synthControls/synthControls.less';
