--- a/app/main.less
+++ b/app/main.less
@@ -33,10 +33,10 @@ canvas.fullScreen {
 
 
 //LESS IMPORTS
-@import 'elements/dropDown/dropDown.less';
-@import 'elements/sliderVertical/sliderVertical.less';
+@import '../elements/dropDown/dropDown.less';
+@import '../elements/sliderVertical/sliderVertical.less';
 
-@import 'directives/copier/copier.less';
-@import 'directives/helpWindow/helpWindow.less';
-@import 'directives/menu/menu.less';
-@import 'directives/synthControls/synthControls.less';
+@import '../directives/copier/copier.less';
+@import '../directives/helpWindow/helpWindow.less';
+@import 'menu/menu.less';
+@import 'menu/synthControls/synthControls.less';
