just a bunch of renaming

--- a/app/app.controller.less
+++ b/app/app.controller.less
@@ -33,10 +33,10 @@ canvas.fullScreen {
 
 
 //LESS IMPORTS
-@import '../elements/dropDown/dropDown.less';
-@import '../elements/sliderVertical/sliderVertical.less';
+@import '../elements/dropDown/dropDown.directive.less';
+@import '../elements/sliderVertical/sliderVertical.directive.less';
 
-@import '../directives/copier/copier.less';
-@import '../directives/helpWindow/helpWindow.less';
-@import 'menu/menu.less';
-@import 'menu/synthControls/synthControls.less';
+@import '../directives/copier/copier.directive.less';
+@import '../directives/helpWindow/helpWindow.directive.less';
+@import 'menu/menu.directive.less';
+@import 'menu/synthControls/synthControls.directive.less';
