--- a/app/menu/synthControls/synthControls.directive.less
+++ b/app/menu/synthControls/synthControls.directive.less
@@ -1,5 +1,5 @@
 div.synthControlsContainer {
-    height: calc(100% - 341px);
+    height: calc(~"100% - 341px");
     overflow-y: auto;
 
 	> div.synthSelector {
